option java_package = "org.umundo.protobuf";

message ChatMsg {
	optional string username = 1;
	optional string message = 2;
	optional string FlyCordX = 3;
	optional string FlyCordY = 4;
	enum Type {
		NORMAL = 0;
		JOINED = 1;
		LEFT = 2;
		FLYCORD = 3;
		FLYSTOPPED = 4;
	}
	optional Type type = 5 [default = NORMAL];
}

